# oathkeeper

./: .env.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PRD.md  README.md  agent-upgrade-plan.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  main.py  meta-prompt.md  pyproject.toml  readme-update-plan.md  slm-extension-plan.md
.claude/: settings.json
.claude/agents/: code-reviewer.md
.playwright-mcp/: page-2026-03-31T23-41-33-206Z.yml  page-2026-03-31T23-43-18-553Z.yml  page-2026-03-31T23-50-20-338Z.yml  page-2026-03-31T23-55-42-166Z.yml  page-2026-04-01T00-03-05-394Z.yml  page-2026-04-03T01-55-26-969Z.yml  page-2026-04-03T01-55-56-341Z.yml  page-2026-04-03T01-56-26-320Z.yml  page-2026-04-03T01-56-35-314Z.yml
backend/app/agent/: base.py  embeddings.py  graph.py  llm.py  log_types.py  prompt_loader.py  service.py  state.py
backend/app/api/: exceptions.py  main.py
backend/app/db/: base.py  defaults_loader.py  pinecone_client.py  seed.py  session.py  vector_store.py
backend/app/utils/: path.py  (+3 more)
configs/defaults/: company_settings.yaml  cost_items.yaml  scoring_criteria.yaml  team_members.yaml
configs/prompts/: deal_structuring.yaml  final_verdict.yaml  orchestrator.yaml  resource_estimation.yaml  risk_analysis.yaml  scoring.yaml  similar_project.yaml  system.yaml
docs/: PRD-old.md  PRD.md  README(kr).md  deployment-plan.md  task-plan.md
docs/manual/: env-setting(en).md  env-setting(kr).md  manual(en).md  manual(kr).md
frontend/: Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: admin-settings.spec.ts  deal-analysis.spec.ts
frontend/playwright-report/: index.html
frontend/test-results/: .last-run.json
nginx/: default.conf
notebooks/: template.ipynb
notebooks/agents/: 01_llm_test.ipynb  02_prompt_test.ipynb  03_node_test.ipynb  04_graph_test.ipynb  04_worker_test.ipynb  05_orchestrator_test.ipynb
tests/: conftest.py
tests/e2e/: conftest.py  test_agent_logs.py  test_deal_scenarios.py  test_performance.py
tests/fixtures/: sample_deals.py  sample_llm_responses.py
tests/integration/: conftest.py  test_agent_upgrade_flow.py  test_analysis_e2e.py  test_deal_flow.py  test_notion.py  test_notion_flow.py  test_pinecone.py  test_settings_flow.py
(+193 files in other folders)
