[project]
name = "oathkeeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
authors = [
    { name = "KMYU", email = "sguys99@gmail.com" } # Optional
]

maintainers = [
    { name = "KMYU", email = "sguys99@gmail.com" } # Optional
]
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.34.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.0.10",
    "litellm>=1.82.1",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pinecone-client>=5.0.0",
    "notion-client>=2.3.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.ruff]
line-length = 105
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008",  # FastAPI Depends() in function arguments
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m unit"
markers = [
    "unit: fast, isolated tests with no external dependencies",
    "integration: tests that require external services or API keys",
    "e2e: end-to-end tests requiring a running server and database",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.0",
    "pre-commit>=3.3.3",
]

[project.optional-dependencies]
dev = [
    "ruff >= 0.8.0",
    "pre-commit >= 3.3.3",
]
